--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
   "extends": [
     "config:base",
-    "default:automergeDigest"
+    ":automergeDigest",
+    ":automergePatch",
+    ":automergeMinor",
+    ":automergePr",
+    ":docker",
+    ":skipStatusChecks"
   ]
 }
