build(TravisCI): fix hadolint config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
 
 before_install:
   -  docker pull hadolint/hadolint
-  
+
 script:
-  - docker run --rm -i hadolint/hadolint < Dockerfile
+  - docker run --rm -i hadolint/hadolint hadolint \
+    --ignore DL3018 \
+    - < Dockerfile
