--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,5 @@ services:
 before_install:
   -  docker pull hadolint/hadolint
 
-script: |
-  - docker run --rm -i hadolint/hadolint hadolint \
-    --ignore DL3018 \
-    - < Dockerfile
+script:
+  - docker run --rm -i hadolint/hadolint hadolint --ignore DL3018 - < Dockerfile
