--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,3 +10,17 @@ jobs:
       - name: Build the Docker image
         run: |
           docker run -i $(docker build -q .) /bin/sh -c "java -version && mvn --version"
+
+  auto-merge:
+    runs-on: ubuntu-latest
+    needs: build
+
+    permissions:
+      pull-requests: write
+      contents: write
+
+    steps:
+      - name: Automatically merge dependabot upgrades
+        uses: fastify/github-action-merge-dependabot@v3
+        with:
+          target: minor
